--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DB_HOST=localhost
-DB_NAME=dbname
-DB_USER=user
-DB_PASS=password
-YII_DEBUG=true
-YII_ENV=dev
+DB_NAME=awesome
+DB_USER=root
+DB_PASS=root
+YII_DEBUG=false
+YII_ENV=prod
